# server/routes/listRouter.js
@@ -2,7 +2,10 @@ const express = require('express');
 const router = express.Router();
 const listController = require('../controllers/listController.js');
 
-router.get('/public/:subject_id', listController.getPublicBySubjectId);
-router.get('/:list_id', listController.getListById)
+router.route('/public/:subject_id')
+    .get(listController.getPublicBySubjectId)
+
+router.route('/:list_id')
+    .get(listController.getListById)
 
 module.exports = router;
